[gd_scene load_steps=7 format=2]

[ext_resource path="res://scenes/Player/laser.tres" type="Texture" id=1]
[ext_resource path="res://scenes/Player/laser_detonation.png" type="Texture" id=2]
[ext_resource path="res://scenes/Player/Laser.gd" type="Script" id=3]
[ext_resource path="res://scenes/SoundFX/laser.ogg" type="AudioStream" id=4]
[ext_resource path="res://scenes/Player/cursor.png" type="Texture" id=5]

[sub_resource type="Animation" id=1]
resource_name = "detonation"
length = 0.09
step = 0.03
tracks/0/type = "value"
tracks/0/path = NodePath("LaserDetonationSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.03, 0.06 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("LaserDetonationSprite:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.09 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[node name="Laser" type="Node2D"]
script = ExtResource( 3 )

[node name="Cursor" type="Sprite" parent="."]
z_index = 5
texture = ExtResource( 5 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "detonation"
anims/detonation = SubResource( 1 )

[node name="Timer" type="Timer" parent="."]
wait_time = 0.09
one_shot = true

[node name="RechargeTimer" type="Timer" parent="."]
wait_time = 0.2

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )

[node name="RayCast2D" type="RayCast2D" parent="."]
position = Vector2( -1, 0 )
enabled = true
cast_to = Vector2( 248, 0 )
collision_mask = 9
collide_with_areas = true

[node name="Position2D" type="Position2D" parent="."]
position = Vector2( 8, 0 )

[node name="Line2D" type="Line2D" parent="."]
position = Vector2( 8, 0 )
points = PoolVector2Array( 0, 0, 0, 0 )
width = 4.0
default_color = Color( 1, 1, 1, 1 )
texture = ExtResource( 1 )
texture_mode = 2

[node name="LaserDetonationSprite" type="Sprite" parent="."]
position = Vector2( 12, 0 )
texture = ExtResource( 2 )
hframes = 3
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="RechargeTimer" to="." method="_on_RechargeTimer_timeout"]
